--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-# Zhixin's homepage
+# Zhixin's Homepage
 
 I am a Ph.D. student in [TANKLAB](http://www.tjutanklab.com/) at Tianjin University, advised by [Wenyu Qu](http://cic.tju.edu.cn/faculty/wyqu/index.html) and [Yitao Hu](http://sugartom.com/). My research interests include machine learning systems, model serving, and distributed systems. I received my B.S. degree in computer science from [Northwest A&F University](https://www.nwafu.edu.cn).
 
 
 :octocat: GitHub: [zhixin612](https://github.com/zhixin612)
 
-:email: Email: [zhao612@tju.edu.cn](mailto:zhao612@tju.edu.cn)
+📧 Email: [zhao612@tju.edu.cn](mailto:zhao612@tju.edu.cn)
 
 ---
-### :bookmark_tabs: Publications
+### 📑 Publications
 
 * [under submission] to be update
 * Laiping Zhao, Xinan Dai, **Zhixin Zhao**, Yusong Xin, Yitao Hu, Jun Qian, Jun Yao and Keqiu Li. [High-throughput Sampling, Communicating and Training for Reinforcement Learning Systems](). IWQoS 2023. [to appear]
@@ -19,14 +19,14 @@ I am a Ph.D. student in [TANKLAB](http://www.tjutanklab.com/) at Tianjin Univers
 * 2023： ICA3PP Program Committee member
 
 ---
-### :star: Main Awards
+### ⭐ Main Awards
 
 * 2021: The 2021 ICPC Shaanxi National Invitational: **Silver Medal**
 * 2020: The 2020 ICPC Asia-East Continent Final: **Bronze Medal**
 * 2020: The 45th ICPC Asia Regional Contest Shanghai Site: **Silver Medal**
 
 ---
-### :mortar_board: Main Honers 
+### 🎓 Main Honers 
 
 * 2023: **Distinguished Academic Scholarship**, Tianjin University
 * 2022: **Outstanding Graduate**, Northwest A&F University
@@ -36,6 +36,6 @@ I am a Ph.D. student in [TANKLAB](http://www.tjutanklab.com/) at Tianjin Univers
 * 
 
 ---
-### Hobbies
+### 🏃‍♂️ Hobbies
 
-Travel:rocket:, photography:camera_flash:, table tennis:ping_pong:, badminton:badminton:...
+travel🚀  photography📸  ping-pong🏓  badminton🏸 ...
