--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 and distributed systems. I received my B.S. degree in computer science 
 from <a href="https://www.nwafu.edu.cn/">Northwest A&amp;F University</a>.</p>
 
-<p>:octocat: GitHub: <a href="https://github.com/zhixin612">zhixin612</a></p>
+<p>GitHub<strong>: <a href="https://github.com/zhixin612">zhixin612</a></p>
 
-<p>📧 Email: <a href="mailto:zhao612@tju.edu.cn">zhao612@tju.edu.cn</a></p>
+<p>Email<strong>: <a href="mailto:zhao612@tju.edu.cn">zhao612@tju.edu.cn</a></p>
 
 <hr>
 <h3 id="-publications">📑 Publications<a class="anchorjs-link " href="#-publications" aria-label="Anchor" data-anchorjs-icon="" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a></h3>
