--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h1 id="zhixins-homepage">Zhixin’s homepage</h1>
 
 <p>I am a Ph.D. student in <a href="http://www.tjutanklab.com/">TANKLAB</a> at Tianjin University, advised by <a href="http://cic.tju.edu.cn/faculty/wyqu/index.html">Wenyu Qu</a> and <a href="http://sugartom.com/">Yitao Hu</a>.
- My research interests include machine learning systems, model serving, 
+ My research interests include machine learning systems, DNN model serving, 
 and distributed systems. I received my B.S. degree in computer science 
 from <a href="https://www.nwafu.edu.cn/">Northwest A&amp;F University</a>.</p>
 
